Creada Busqueda de usuarios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.VerInfoGrupo"></activity>
+        <activity android:name=".view.Buscar"></activity>
     </application>
 
 </manifest>
