--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.1.2"
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
 }
 
 
