--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,9 +30,10 @@
         <activity android:name=".view.EditarEventoActivity" />
         <activity android:name=".view.BuscarActivity" />
         <activity android:name=".view.VerInfoEventoActivity" />
-        <activity android:name=".view.VerInfoOtroUsuarioActivity"></activity>
-        <activity android:name=".view.LoginActivity"></activity>
-        <activity android:name=".view.CrearUsuarioActivity"></activity>
+        <activity android:name=".view.VerInfoOtroUsuarioActivity" />
+        <activity android:name=".view.LoginActivity" />
+        <activity android:name=".view.CrearUsuarioActivity" />
+        <activity android:name=".view.VerEventosUsuariosQueSigoActivity"></activity>
     </application>
 
 </manifest>
