--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,12 @@
         <activity android:name=".view.VerInfoOtroUsuarioActivity" />
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.CrearUsuarioActivity" />
-        <activity android:name=".view.BuscarEventoActivity"></activity>
-        <activity android:name=".view.VerEventosUsuariosQueSigoActivity"></activity>
-
+        <activity android:name=".view.BuscarEventoActivity" />
+        <activity android:name=".view.VerEventosUsuariosQueSigoActivity" />
+        <activity
+            android:name=".view.NavigationDrawer"
+            android:label="@string/title_activity_navigation_drawer"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
