--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,16 +29,18 @@ dependencies {
     })
 
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.firebase:firebase-database:9.6.1'
-    compile 'com.google.firebase:firebase-auth:9.6.1'
-    compile 'com.google.android.gms:play-services-maps:9.6.1'
-    compile 'com.google.android.gms:play-services-places:9.6.1'
+    compile 'com.google.firebase:firebase-database:9.8.00'
+    compile 'com.google.firebase:firebase-auth:9.8.00'
+    compile 'com.google.android.gms:play-services-maps:9.8.00'
+    compile 'com.google.android.gms:play-services-places:9.8.00'
     compile 'com.android.support:design:24.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.firebase:firebase-storage:9.8.00'
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.1.2'
 }
+
 
 
 
