tasca llistar tags disponibles i crear un tag nou

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,13 @@
         <activity android:name=".view.CrearUsuarioActivity" />
         <activity android:name=".view.BuscarEventoActivity" />
         <activity android:name=".view.VerEventosUsuariosQueSigoActivity" />
-        <activity android:name=".view.CrearGrupoActivity"></activity>
+        <activity android:name=".view.CrearGrupoActivity" />
         <activity
             android:name=".view.NavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
             android:theme="@style/AppTheme" />
-        <activity android:name=".view.VerGruposCreadosActivity"></activity>
+        <activity android:name=".view.VerGruposCreadosActivity" />
+        <activity android:name=".view.IndicarTagsActivity" />
     </application>
 
 </manifest>
