Subida de fotos de perfil para usuario conectado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".view.BuscarEventoActivity" />
         <activity android:name=".view.VerEventosUsuariosQueSigoActivity" />
         <activity android:name=".view.CrearGrupoActivity" />
+        <activity android:name=".view.PerfilUsuarioActivity" />
         <activity
             android:name=".view.NavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
