--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".view.VerGruposCreadosActivity" />
         <activity android:name=".view.IndicarTagsActivity" />
+        <activity android:name=".view.VerGruposConTagActivity"></activity>
     </application>
 
 </manifest>
