--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,19 @@
         <activity android:name=".view.BuscarEventoActivity" />
         <activity android:name=".view.VerEventosUsuariosQueSigoActivity" />
         <activity android:name=".view.CrearGrupoActivity" />
-        <activity android:name=".view.PerfilUsuarioActivity" />
+        <activity android:name=".view.EditarGrupoActivity" />
+        <activity android:name=".view.PerfilUsuarioActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="twitterlogin"
+                    android:scheme="x-oauthflow-twitter" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".view.NavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
