--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.firebase:firebase-storage:9.6.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:cardview-v7:22.0.+'
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.1.2'
     compile('com.twitter.sdk.android:twitter:2.3.0@aar') {
